# hy-kubernetes

./: README.md
.github/workflows/: exercise_3_03.yaml
exercise_1.01/: README.md
exercise_1.01/log-output-app/: Cargo.toml
exercise_1.02/: README.md
exercise_1.03/: README.md
exercise_1.03/log-output-app/: Dockerfile
exercise_1.04/: README.md
exercise_1.04/todo-app/: Cargo.toml  Dockerfile
exercise_1.05/: README.md
exercise_1.05/backend/: Cargo.toml
exercise_1.05/manifests/: deployment.yaml
exercise_1.06/: README.md
exercise_1.06/manifests/: deployment.yaml  service.yaml
exercise_1.07/: README.md
exercise_1.07/log-output-app/: Cargo.toml
exercise_1.08/: Dockerfile  README.md
exercise_1.08/manifests/: service.yaml
exercise_1.09/manifests/: deployment.log-output-app.yaml  deployment.ping-pong-app.yaml  ingress.yaml
exercise_1.09/ping-pong-app/: Cargo.toml
exercise_1.10/: README.md
exercise_1.10/manifests/: deployment.yaml
exercise_1.10/writer/: Cargo.toml
exercise_1.11/: .gitignore  README.md
exercise_1.11/manifests/: deployment.yaml  persistent-volume-claim.yaml
exercise_1.11/reader/: Cargo.toml  Dockerfile
exercise_1.11/writer/: Dockerfile
exercise_1.12/: README.md
exercise_1.12/backend/: Cargo.toml
exercise_1.12/manifests/: persistent-volume.yaml
exercise_1.13/: Dockerfile  README.md
exercise_1.13/frontend/: package.json
exercise_1.13/manifests/: deployment.yaml  ingress.yaml  persistent-volume-claim.yaml
exercise_2.01/: README.md
exercise_2.01/log-output-app/: Dockerfile
exercise_2.01/manifests/: deployment.log-output-app.yaml  deployment.ping-pong-app.yaml  service.log-output-app.yaml  service.ping-pong-app.yaml
exercise_2.02/: README.md
exercise_2.02/backend/: Cargo.toml
exercise_2.02/backend/src/: main.rs
exercise_2.02/frontend/: Dockerfile
exercise_2.02/manifests/: deployment.yaml  ingress.yaml  service.yaml
exercise_2.03/: README.md
exercise_2.03/manifests/: deployment.log-output-app.yaml  deployment.ping-pong-app.yaml
exercise_2.04/: README.md
exercise_2.04/backend/: Dockerfile
exercise_2.04/frontend/: package-lock.json
exercise_2.04/manifests/: deployment.yaml  persistent-volume-claim.yaml  persistent-volume.yaml
exercise_2.06/: README.md
exercise_2.06/manifests/: ingress.yaml  service.ping-pong-app.yaml
exercise_2.06/ping-pong-app/: Cargo.toml  Dockerfile
exercise_2.07/: README.md
exercise_2.07/log-output-app/: Cargo.toml
exercise_2.07/manifests/: config-map.ping-pong-app.yaml  deployment.log-output-app.yaml  deployment.ping-pong-app.yaml  postgres.yaml  service.log-output-app.yaml
exercise_2.07/ping-pong-app/: config.toml
exercise_2.08/: README.md
exercise_2.08/backend/: Cargo.toml  config.toml
exercise_2.08/backend/src/: db.rs  main.rs
exercise_2.08/manifests/: deployment.yaml  persistent-volume-claim.yaml  postgres-secret.enc.yaml  postgres.yaml
exercise_2.09/: README.md
exercise_2.09/backend/server/: Cargo.toml
exercise_2.09/backend/server/src/: main.rs
exercise_2.09/frontend/: nginx.conf
exercise_2.09/manifests/: ingress.yaml
exercise_2.10/: README.md
exercise_2.10/backend/: .dockerignore  Cargo.toml
exercise_2.10/backend/daily-todo-job/: Cargo.toml
exercise_2.10/backend/daily-todo-job/src/: main.rs
exercise_2.10/manifests/: daily-todo-cronjob.yaml  deployment.yaml
exercise_3.01/: README.md
exercise_3.01/manifests/: config-map.yaml  deployment.ping-pong-app.yaml  postgres-secret.enc.yaml  service.log-output-app.yaml  (+1 more)
exercise_3.02/: README.md
exercise_3.02/ping-pong-app/: Cargo.toml  Dockerfile
exercise_3.02/ping-pong-app/src/: main.rs
exercise_3.03/: kustomization.yaml
exercise_3.03/backend/common/: Cargo.toml
(+44 files in other folders)
