[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.1"
actix-web = "4.1.0"
anyhow = "1.0.58"
chrono = "0.4.19"
reqwest = "0.11.11"
serde = { version = "1.0.137", features = ["derive"] }
