[package]
name = "ping-pong-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
anyhow = "1.0.58"
config = { version = "0.13.1", features = ["toml"] }
deadpool = "0.9.5"
deadpool-postgres = "0.10.2"
refinery = { version = "0.8.4", features = ["tokio-postgres"] }
serde = { version = "1.0.137", features = ["derive"] }
tokio-postgres = "0.7.6"
