[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[[bin]]
#name = "daily-todo-job"
#path = "jobs/daily-todo/main.rs"

#[[bin]]
#name = "todo-app"
#path = "src/main.rs"

[dependencies]
actix-files = "0.6.1"
actix-web = "4.1.0"
anyhow = "1.0.58"
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.17"
reqwest = "0.11.11"
serde = { version = "1.0.137", features = ["derive"] }
tokio-postgres = { version = "0.7.6", features = ["with-uuid-1"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
todo_common = { path = "../common" }
