[package]
name = "daily-todo-job"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
todo_common = { path = "../common" }
tokio = "*"
reqwest = "0.11.11"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
tokio-postgres = { version = "0.7.6", features = ["with-uuid-1"] }
